# Real-time-chat-and-collaboration-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  test_mongoose_tojson.js
.github/workflows/: ci-cd.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  test_zustand.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.api.ts  axios.ts  file.api.ts  message.api.ts  notification.api.ts  user.api.ts  workspace.api.ts
frontend/src/components/ui/: Input.tsx  (+5 more)
frontend/src/hooks/: useAuth.ts  useMessages.ts  useSocket.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  OAuthCallbackPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts  chatStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: dateFormat.ts
nginx/: nginx.conf  nginx.prod.conf
services/auth-service/: .env.example  Dockerfile  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
services/auth-service/prisma/: seed.ts
services/auth-service/src/: app.ts
services/auth-service/tests/: tsconfig.json
services/encryption-engine/: CMakeLists.txt  Dockerfile  README.md
services/encryption-engine/proto/: encryption.proto
services/encryption-engine/src/: main.cpp
services/encryption-engine/src/crypto/: aes_gcm.cpp  aes_gcm.h  compressor.cpp  compressor.h
services/encryption-engine/src/server/: encryption_service_impl.cpp  encryption_service_impl.h
services/file-service/: .env.example  Dockerfile  index.ts  package-lock.json  package.json
services/file-service/src/: app.ts
services/messaging-service/: Dockerfile  index.ts  jest.config.js  package-lock.json  package.json  test_json.js  test_socket.js  test_socket_client.js  test_socket_edit.js  tsconfig.json
services/messaging-service/proto/: encryption.proto
services/notification-service/: .env.example  Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
(+94 files in other folders)
